--- a/basic-001/cluster.yml
+++ b/basic-001/cluster.yml
@@ -1,7 +1,5 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+name: argocd
 nodes:
 - role: control-plane
-  extraPortMappings:
-  - containerPort: 31923
-    hostPort: 8080
